--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://developerfolio.js.org/",
-  "name": "developerfolio",
+  "homepage": "https://nadeem072.github.io/my-app",
+  "name": "nadeem072",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
